popwaki we wszytkim

--- a/list01/AE2018_Simulated_Annealing_Demo.ipynb
+++ b/list01/AE2018_Simulated_Annealing_Demo.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 163,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 165,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -189,29 +189,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..........14.077036142349243\n",
-      "614.0 [ 1  2  0  9  8 10  7  5 11  6  3  4]\n"
+      "Problem size: 14\n",
+      "Flow matrix:\n",
+      " [[ 0.  1.  2.  3.  4.  1.  2.  3.  4.  5.  2.  3.  4.  5.]\n",
+      " [ 1.  0.  1.  2.  3.  2.  1.  2.  3.  4.  3.  2.  3.  4.]\n",
+      " [ 2.  1.  0.  1.  2.  3.  2.  1.  2.  3.  4.  3.  2.  3.]\n",
+      " [ 3.  2.  1.  0.  1.  4.  3.  2.  1.  2.  5.  4.  3.  2.]\n",
+      " [ 4.  3.  2.  1.  0.  5.  4.  3.  2.  1.  6.  5.  4.  3.]\n",
+      " [ 1.  2.  3.  4.  5.  0.  1.  2.  3.  4.  1.  2.  3.  4.]\n",
+      " [ 2.  1.  2.  3.  4.  1.  0.  1.  2.  3.  2.  1.  2.  3.]\n",
+      " [ 3.  2.  1.  2.  3.  2.  1.  0.  1.  2.  3.  2.  1.  2.]\n",
+      " [ 4.  3.  2.  1.  2.  3.  2.  1.  0.  1.  4.  3.  2.  1.]\n",
+      " [ 5.  4.  3.  2.  1.  4.  3.  2.  1.  0.  5.  4.  3.  2.]\n",
+      " [ 2.  3.  4.  5.  6.  1.  2.  3.  4.  5.  0.  1.  2.  3.]\n",
+      " [ 3.  2.  3.  4.  5.  2.  1.  2.  3.  4.  1.  0.  1.  2.]\n",
+      " [ 4.  3.  2.  3.  4.  3.  2.  1.  2.  3.  2.  1.  0.  1.]\n",
+      " [ 5.  4.  3.  2.  3.  4.  3.  2.  1.  2.  3.  2.  1.  0.]]\n",
+      "Distance matrix:\n",
+      " [[  0.  10.   0.   5.   1.   0.   1.   2.   2.   2.   2.   0.   4.   0.]\n",
+      " [ 10.   0.   1.   3.   2.   2.   2.   3.   2.   0.   2.   0.  10.   5.]\n",
+      " [  0.   1.   0.  10.   2.   0.   2.   5.   4.   5.   2.   2.   5.   5.]\n",
+      " [  5.   3.  10.   0.   1.   1.   5.   0.   0.   2.   1.   0.   2.   5.]\n",
+      " [  1.   2.   2.   1.   0.   3.   5.   5.   5.   1.   0.   3.   0.   5.]\n",
+      " [  0.   2.   0.   1.   3.   0.   2.   2.   1.   5.   0.   0.   2.   5.]\n",
+      " [  1.   2.   2.   5.   5.   2.   0.   6.   0.   1.   5.   5.   5.   1.]\n",
+      " [  2.   3.   5.   0.   5.   2.   6.   0.   5.   2.  10.   0.   5.   0.]\n",
+      " [  2.   2.   4.   0.   5.   1.   0.   5.   0.   0.  10.   5.  10.   0.]\n",
+      " [  2.   0.   5.   2.   1.   5.   1.   2.   0.   0.   0.   4.   0.   0.]\n",
+      " [  2.   2.   2.   1.   0.   0.   5.  10.  10.   0.   0.   5.   0.   5.]\n",
+      " [  0.   0.   2.   0.   3.   0.   5.   0.   5.   4.   5.   0.   3.   3.]\n",
+      " [  4.  10.   5.   2.   0.   2.   5.   5.  10.   0.   0.   3.   0.  10.]\n",
+      " [  0.   5.   5.   5.   5.   5.   1.   0.   0.   0.   5.   3.  10.   0.]]\n",
+      "..........12.98963212966919\n",
+      "1084.0 [11  6  4  2  9 10  8  7 13  5  0 12  1  3]\n"
      ]
     }
    ],
    "source": [
+    "# nug = 14\n",
     "t0 = time.time()\n",
-    "\n",
+    "nug = 14\n",
+    "A, B = get_data(nug)\n",
     "T = 100000\n",
     "\n",
-    "permutations = np.empty((T, n), dtype=np.int64)\n",
+    "permutations = np.empty((T, nug), dtype=np.int64)\n",
     "costs = np.zeros(T)\n",
     "for i in range(T):\n",
     "    if i%10000 == 0:\n",
     "        print('.', end='')\n",
-    "    permutations[i, :] = np.random.permutation(n)\n",
+    "    permutations[i, :] = np.random.permutation(nug)\n",
     "    costs[i] = qap_objective_function(permutations[i, :], A, B, nug)\n",
     "\n",
     "print(time.time() - t0)\n",
@@ -222,21 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 822.  676.  764.  840.  754.  812.  874.  812.  798.  790.]\n"
+      "[ 1340.  1330.  1534.  1392.  1330.  1312.  1394.  1340.  1342.  1282.]\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAEG9JREFUeJzt3X2MXNV5x/HvEzsxIVWwzZtc23SJ\nYkUhkQp0BaaREILUvEUxqqA1qoJDXVlqqQpVpcRUrVATkKCqShOpIbHArUEVhtK0WEBruYCVtlIA\n8xICOMgboHiLg50YnKZRaEyf/jFnzXg965mxd+dlz/cjrebec8+Mzz2end+cc+7MRmYiSarP+/rd\nAElSfxgAklQpA0CSKmUASFKlDABJqpQBIEmVMgAkqVIGgCRVygCQpErN7XcDjuSkk07KkZGRfjdD\nkobK008//cPMPLldvYEOgJGREbZv397vZkjSUImI/+yknlNAklQpA0CSKmUASFKlDABJqpQBIEmV\nMgAkqVIGgCRVygCQpEoZAJJUqYH+JLA03UbWPXzI/mu3Xt6nlkj95whAkiplAEhSpQwASaqUASBJ\nlTIAJKlSBoAkVcoAkKRKGQCSVCkDQJIqZQBIUqUMAEmqlAEgSZUyACSpUgaAJFXKAJCkShkAklQp\nA0CSKmUASFKlDABJqpQBIEmVMgAkqVIGgCRVquMAiIg5EfFsRDxU9k+PiCciYmdE3BcRHyjl88r+\nWDk+0vQYN5bylyPi4uk+GUlS57oZAVwP7Gjavw24PTOXAW8Ba0r5GuCtzPwocHupR0ScAawCPgFc\nAnwtIuYcW/MlSUerowCIiCXA5cCdZT+AC4EHSpWNwBVle2XZpxy/qNRfCWzKzHcy81VgDDhnOk5C\nktS9TkcAfwV8Afi/sn8i8HZmHij748Disr0Y2AVQju8v9Q+Wt7jPQRGxNiK2R8T2vXv3dnEqkqRu\ntA2AiPgMsCczn24ublE12xw70n3eK8hcn5mjmTl68sknt2ueJOkoze2gzqeAz0bEZcBxwIdpjAjm\nR8Tc8i5/CfBGqT8OLAXGI2IucAKwr6l8QvN9JEk91nYEkJk3ZuaSzByhsYj7WGb+FvA4cGWpthp4\nsGxvLvuU449lZpbyVeUqodOBZcCT03YmkqSudDICmMoXgU0RcTPwLHBXKb8LuCcixmi8818FkJkv\nRsT9wEvAAeC6zHz3GP59SdIx6CoAMnMbsK1sv0KLq3gy82fAVVPc/xbglm4bKUmafn4SWJIqdSxT\nQJKO0si6hw9uv3br5X1siWrmCECSKmUASFKlDABJqpQBIEmVMgAkqVIGgCRVygCQpEoZAJJUKQNA\nkiplAEhSpQwASaqUASBJlTIAJKlSBoAkVcoAkKRKGQCSVCkDQJIqZQBIUqUMAEmqlAEgSZUyACSp\nUgaAJFXKAJCkShkAklQpA0CSKmUASFKlDABJqpQBIEmVmtvvBkiDYmTdwwe3X7v18rbl0rAzAFS1\n5hd3qTZOAUlSpRwBSC04MlANHAFIUqUcAUhdcEFYs0nbAIiI44BvAfNK/Qcy86aIOB3YBCwEngE+\nl5n/GxHzgLuBXwF+BPxmZr5WHutGYA3wLvAHmbll+k9JOpTTOVJrnUwBvQNcmJm/DJwJXBIRy4Hb\ngNszcxnwFo0XdsrtW5n5UeD2Uo+IOANYBXwCuAT4WkTMmc6TkSR1rm0AZMNPyu77y08CFwIPlPKN\nwBVle2XZpxy/KCKilG/KzHcy81VgDDhnWs5C6rORdQ8f/JGGRUeLwBExJyKeA/YAW4HvA29n5oFS\nZRxYXLYXA7sAyvH9wInN5S3u0/xvrY2I7RGxfe/evd2fkSSpIx0tAmfmu8CZETEf+Efg462qlduY\n4thU5ZP/rfXAeoDR0dHDjkuDYqp3+y4Ua1h0dRloZr4NbAOWA/MjYiJAlgBvlO1xYClAOX4CsK+5\nvMV9JEk91jYAIuLk8s6fiPgg8GlgB/A4cGWpthp4sGxvLvuU449lZpbyVRExr1xBtAx4crpORJLU\nnU6mgBYBG8sVO+8D7s/MhyLiJWBTRNwMPAvcVerfBdwTEWM03vmvAsjMFyPifuAl4ABwXZlakiT1\nQdsAyMzngbNalL9Ci6t4MvNnwFVTPNYtwC3dN1PqjlfjSO35VRCSVCm/CkKzhu/6pe44ApCkSjkC\nkHrEEYoGjSMASaqUIwANNd9VS0fPEYAkVcoAkKRKOQUkzSCnqDTIHAFIUqUMAEmqlAEgSZUyACSp\nUgaAJFXKq4A0FPwzi9L0cwQgSZVyBKCh47X10vRwBCBJlTIAJKlSBoAkVcoAkKRKGQCSVCmvAlLP\neC2/NFgcAUhSpRwBSH3myEj94ghAkirlCEADy0/8SjPLEYAkVcoAkKRKOQUkDRAXhNVLjgAkqVIG\ngCRVygCQpEq5BqCB4qWfUu84ApCkShkAklSptgEQEUsj4vGI2BERL0bE9aV8YURsjYid5XZBKY+I\n+GpEjEXE8xFxdtNjrS71d0bE6pk7LUlSO52MAA4Af5SZHweWA9dFxBnAOuDRzFwGPFr2AS4FlpWf\ntcAd0AgM4CbgXOAc4KaJ0JAk9V7bReDM3A3sLtv/HRE7gMXASuCCUm0jsA34Yim/OzMT+HZEzI+I\nRaXu1szcBxARW4FLgHun8XykWcMPhWmmdbUGEBEjwFnAE8CpJRwmQuKUUm0xsKvpbuOlbKryyf/G\n2ojYHhHb9+7d203zJEld6Pgy0Ij4BeAfgBsy88cRMWXVFmV5hPJDCzLXA+sBRkdHDzsu1cjRgGZC\nRwEQEe+n8eL/d5n5zVL8ZkQsyszdZYpnTykfB5Y23X0J8EYpv2BS+bajb7pmC6/9l/qjk6uAArgL\n2JGZf9l0aDMwcSXPauDBpvJrytVAy4H9ZYpoC7AiIhaUxd8VpUyS1AedjAA+BXwO+G5EPFfK/hi4\nFbg/ItYArwNXlWOPAJcBY8BPgWsBMnNfRHwZeKrU+9LEgrAkqfc6uQro32k9fw9wUYv6CVw3xWNt\nADZ000BJ0szwk8CSVCkDQJIqZQBIUqUMAEmqlAEgSZXyD8KoL/zwl9R/jgAkqVKOAKQh4/cCabo4\nApCkShkAklQpp4CkIeZ0kI6FIwBJqpQBIEmVMgAkqVIGgCRVygCQpEoZAJJUKQNAkiplAEhSpQwA\nSaqUnwTWjPJrn3vHTwWrW44AJKlSBoAkVcoAkKRKuQYgVco1AzkCkKRKOQLQtPPKn/7z3b064QhA\nkiplAEhSpQwASaqUASBJlXIRWNPChV9p+DgCkKRKGQCSVCmngKRZzs8EaCqOACSpUm1HABGxAfgM\nsCczP1nKFgL3ASPAa8BvZOZbERHAV4DLgJ8Cn8/MZ8p9VgN/Uh725szcOL2nol5z4Vcabp2MAP4W\nuGRS2Trg0cxcBjxa9gEuBZaVn7XAHXAwMG4CzgXOAW6KiAXH2nhJ0tFrGwCZ+S1g36TilcDEO/iN\nwBVN5Xdnw7eB+RGxCLgY2JqZ+zLzLWArh4eKJKmHjnYN4NTM3A1Qbk8p5YuBXU31xkvZVOWSpD6Z\n7quAokVZHqH88AeIWEtj+ojTTjtt+lomyXUbHeJoA+DNiFiUmbvLFM+eUj4OLG2qtwR4o5RfMKl8\nW6sHzsz1wHqA0dHRliGh/vEFRJo9jnYKaDOwumyvBh5sKr8mGpYD+8sU0RZgRUQsKIu/K0qZJKlP\nOrkM9F4a795PiohxGlfz3ArcHxFrgNeBq0r1R2hcAjpG4zLQawEyc19EfBl4qtT7UmZOXliWJPVQ\n2wDIzKunOHRRi7oJXDfF42wANnTVOknSjPGTwJJUKQNAkiplAEhSpQwASaqUXwettrz2X5qdDABJ\nh4W8fzegDk4BSVKlDABJqpRTQGrJeX9p9jMAJB3GvyNcB6eAJKlSjgB0kNM+Ul0cAUhSpQwASaqU\nU0CSjsgF4dnLAKiEv8SSJnMKSJIq5Qigcl75I9XLAJDUMacSZxengCSpUo4AKuS0jyQwACQdJaeD\nhp9TQJJUKUcAko6Zo4Hh5AhAkiplAEhSpQwASaqUawCzlJd6ql9cDxgeBoCkGWMYDDYDYBbxXb8G\nmWEweFwDkKRKGQCSVCmngIac0z4adk4N9Y8BMIR80dew8zk8GAyAIeEvjKTpZgAMMF/0VRung3qr\n5wEQEZcAXwHmAHdm5q29bsMg80Vfapjqd8FgmD49DYCImAP8NfBrwDjwVERszsyXetmOQeOLvqR+\n6PUI4BxgLDNfAYiITcBKYNYGgC/u0vTq5HfKUUJneh0Ai4FdTfvjwLk9bsO08cVdGkydTB85xdT7\nAIgWZXlIhYi1wNqy+5OIeHlS/ZOAH85A22YT+6g9+6i9WddHcdv01GkyqH30S51U6nUAjANLm/aX\nAG80V8jM9cD6qR4gIrZn5ujMNG92sI/as4/as4/aG/Y+6vVXQTwFLIuI0yPiA8AqYHOP2yBJoscj\ngMw8EBG/D2yhcRnohsx8sZdtkCQ19PxzAJn5CPDIMTzElNNDOsg+as8+as8+am+o+ygys30tSdKs\n49dBS1KlBjIAImJ+RDwQEd+LiB0RcV5ELIyIrRGxs9wuKHUjIr4aEWMR8XxEnN3v9s+0iPhYRDzX\n9PPjiLjBPnpPRPxhRLwYES9ExL0RcVy5+OCJ0j/3lQsRiIh5ZX+sHB/pb+t7IyKuL/3zYkTcUMqq\nfg5FxIaI2BMRLzSVdd0nEbG61N8ZEav7cS4dycyB+wE2Ar9Ttj8AzAf+HFhXytYBt5Xty4B/pvEZ\ng+XAE/1uf4/7ag7wAxrX/dpHjfNdDLwKfLDs3w98vtyuKmVfB363bP8e8PWyvQq4r9/n0IM++iTw\nAnA8jbXAfwWW1f4cAs4HzgZeaCrrqk+AhcAr5XZB2V7Q73Nreb79bkCL/4APl1/emFT+MrCobC8C\nXi7b3wCublWvhh9gBfAf9tEhfTLxifOF5cXtIeBiGh/YmVvqnAdsKdtbgPPK9txSL/rR9h720VU0\nvoxxYv9PgS/4HEqAkUkB0FWfAFcD32gqP6TeIP0M4hTQR4C9wN9ExLMRcWdEfAg4NTN3A5TbU0r9\nVl8vsbiXDe6zVcC9Zds+AjLzv4C/AF4HdgP7gaeBtzPzQKnW3AcH+6cc3w+c2Ms298ELwPkRcWJE\nHE/j3exSfA610m2fDE1fDWIAzKUxBLsjM88C/ofGsGsqbb9eYrYqc9ifBf6+XdUWZbO2j8oc7Urg\ndOAXgQ8Bl7aoOtEHVfUPQGbuAG4DtgL/AnwHOHCEu1TXRx2Yqk+Gpq8GMQDGgfHMfKLsP0AjEN6M\niEUA5XZPU/0jfr3ELHYp8Exmvln27aOGTwOvZubezPw58E3gV4H5ETHx2ZfmPjjYP+X4CcC+3ja5\n9zLzrsw8OzPPp3G+O/E51Eq3fTI0fTVwAZCZPwB2RcTHStFFNL4uejMwsZq+GniwbG8Grikr8suB\n/RPDtQpczXvTP2AfTXgdWB4Rx0dE8N5z6HHgylJncv9M9NuVwGNZJm9ns4g4pdyeBvw6jeeSz6HD\nddsnW4AVEbGgjEZXlLLB0+9FiCkWYc4EtgPPA/9EYyX9ROBRGu9SHgUWlrpB44/MfB/4LjDa7/b3\nqI+OB34EnNBUZh+91xd/BnyPxlz3PcA8GutLTwJjNKbN5pW6x5X9sXL8I/1uf4/66N9oBON3gIt8\nDiU0QnA38HMa7+TXHE2fAL9dnk9jwLX9Pq+pfvwksCRVauCmgCRJvWEASFKlDABJqpQBIEmVMgAk\nqVIGgCRVygCQpEoZAJJUqf8H7VqQl58L5WkAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAFJdJREFUeJzt3X+MXeV95/H3pw7QbttdzGKyru3U\nNHV2A5XqoCkgRbtKSQuGVGuiXSSiqlgU1W0F/bFquoUgLWmySGS3KSpSSuUUb0w3DUX5oXgTd4lL\nw0b5gx8mNQ6GUCZAw8QIJmtCGkXLrsl3/7iPw/X4zsyd8fy6c94v6eqe8z3Pufd87Zn7vc/znHMm\nVYUkqXt+aLkPQJK0PCwAktRRFgBJ6igLgCR1lAVAkjrKAiBJHWUBkKSOsgBIUkdZACSpo96w3Acw\nk7PPPrs2b9683IchSSPl0Ucf/VZVrZut3YouAJs3b+bAgQPLfRiSNFKS/MMw7RwCkqSOsgBIUkdZ\nACSpoywAktRRFgBJ6igLgCR1lAVAkjrKAiBJHWUBkKSOWtFXAksrweYbPz8w/txt71riI5EWlgVA\nmqf+wmAx0CiyAEgLwGKgUWQBkBo/xNU1s04CJ/nhJA8neSzJ4SR/2OIfS/JskoPtsbXFk+SOJONJ\nDiW5oO+1diR5uj12LF5akqTZDNMDeBW4pKq+m+Q04MtJ/rpt+/2q+uSU9pcDW9rjIuBO4KIkZwG3\nAGNAAY8m2VtVLy9EIpKkuZm1B1A9322rp7VHzbDLduDutt+DwJlJ1gOXAfur6mj70N8PbDu1w5ck\nzddQ1wEkWZPkIPASvQ/xh9qmW9swz+1JzmixDcDzfbtPtNh0cUnSMhiqAFTVa1W1FdgIXJjkZ4Cb\ngH8F/BxwFvAHrXkGvcQM8RMk2ZnkQJIDk5OTwxyeJGke5nQWUFV9O8kDwLaq+qMWfjXJfwPe29Yn\ngE19u20EjrT4O6bEHxjwHruAXQBjY2MzDTVJp2y6i7ykLhjmLKB1Sc5syz8C/ALwtTauT5IAVwKP\nt132Ate0s4EuBl6pqheA+4BLk6xNsha4tMUkSctgmB7AemBPkjX0Csa9VfW5JH+bZB29oZ2DwG+0\n9vuAK4Bx4HvAtQBVdTTJB4FHWrsPVNXRhUtFkjQXsxaAqjoEvG1A/JJp2hdw/TTbdgO753iMkqRF\n4N1AJamjvBWEtIi8vYRWMnsAktRRFgBJ6igLgCR1lAVAkjrKSWB1jlf/Sj32ACSpoywAktRRDgFJ\nS8RrArTSWADUCY77SydzCEiSOsoCIEkdZQGQpI5yDkBaBk4IayWwByBJHWUBkKSOsgBIUkdZACSp\noywAktRRsxaAJD+c5OEkjyU5nOQPW/zcJA8leTrJXyU5vcXPaOvjbfvmvte6qcWfSnLZYiUlSZrd\nMD2AV4FLqupnga3AtiQXAx8Cbq+qLcDLwHWt/XXAy1X108DtrR1JzgOuBs4HtgF/mmTNQiYjSRre\nrAWger7bVk9rjwIuAT7Z4nuAK9vy9rZO2/7OJGnxe6rq1ap6FhgHLlyQLCRJczbUhWDtm/qjwE8D\nHwG+Dny7qo61JhPAhra8AXgeoKqOJXkF+Oct/mDfy/bv0/9eO4GdAG9605vmmI40erwoTMtlqEng\nqnqtqrYCG+l9a3/roGbtOdNsmy4+9b12VdVYVY2tW7dumMOTJM3DnM4CqqpvAw8AFwNnJjneg9gI\nHGnLE8AmgLb9nwFH++MD9pEkLbFhzgJal+TMtvwjwC8ATwJfBP59a7YD+Gxb3tvWadv/tqqqxa9u\nZwmdC2wBHl6oRCRJczPMHMB6YE+bB/gh4N6q+lySJ4B7kvxn4O+Au1r7u4C/SDJO75v/1QBVdTjJ\nvcATwDHg+qp6bWHTkSQNa9YCUFWHgLcNiD/DgLN4qur/AFdN81q3ArfO/TAlSQvNK4ElqaP8ewBa\nNab+3V9PqZRmZg9AkjrKHoBG2tRv/ZKGZw9AkjrKAiBJHWUBkKSOsgBIUkdZACSpoywAktRRFgBJ\n6igLgCR1lAVAkjrKK4GlFco/FanFZg9AkjrKAiBJHWUBkKSOsgBIUkdZACSpo2YtAEk2JflikieT\nHE7yOy3+/iTfTHKwPa7o2+emJONJnkpyWV98W4uNJ7lxcVKSJA1jmNNAjwG/V1VfSfLjwKNJ9rdt\nt1fVH/U3TnIecDVwPvATwN8keUvb/BHgF4EJ4JEke6vqiYVIRJI0N7MWgKp6AXihLf9jkieBDTPs\nsh24p6peBZ5NMg5c2LaNV9UzAEnuaW0tAJK0DOZ0IViSzcDbgIeAtwM3JLkGOECvl/AyveLwYN9u\nE7xeMJ6fEr9oXketTuvin4H0ojAthqEngZP8GPAp4Her6jvAncCbga30eggfPt50wO41Q3zq++xM\nciDJgcnJyWEPT5I0R0MVgCSn0fvw/3hVfRqgql6sqteq6vvAR3l9mGcC2NS3+0bgyAzxE1TVrqoa\nq6qxdevWzTUfSdKQhjkLKMBdwJNV9cd98fV9zd4NPN6W9wJXJzkjybnAFuBh4BFgS5Jzk5xOb6J4\n78KkIUmaq2HmAN4O/Arw1SQHW+x9wHuSbKU3jPMc8OsAVXU4yb30JnePAddX1WsASW4A7gPWALur\n6vAC5iJJmoNhzgL6MoPH7/fNsM+twK0D4vtm2k+StHS8EliSOsoCIEkdZQGQpI6yAEhSR/knIaUF\n1sUrlTWaLADSAH6IqwssABoJfiBLC88CII0YbwynheIksCR1lAVAkjrKAiBJHWUBkKSOsgBIUkdZ\nACSpoywAktRRXgegFcuLv6TFZQGQRpgXhelUOAQkSR1lAZCkjrIASFJHzVoAkmxK8sUkTyY5nOR3\nWvysJPuTPN2e17Z4ktyRZDzJoSQX9L3Wjtb+6SQ7Fi8tSdJshukBHAN+r6reClwMXJ/kPOBG4P6q\n2gLc39YBLge2tMdO4E7oFQzgFuAi4ELgluNFQ5K09GYtAFX1QlV9pS3/I/AksAHYDuxpzfYAV7bl\n7cDd1fMgcGaS9cBlwP6qOlpVLwP7gW0Lmo0kaWhzmgNIshl4G/AQ8MaqegF6RQI4pzXbADzft9tE\ni00Xn/oeO5McSHJgcnJyLocnSZqDoa8DSPJjwKeA362q7ySZtumAWM0QPzFQtQvYBTA2NnbSdkmD\neU2A5mqoHkCS0+h9+H+8qj7dwi+2oR3a80stPgFs6tt9I3BkhrgkaRkMcxZQgLuAJ6vqj/s27QWO\nn8mzA/hsX/yadjbQxcArbYjoPuDSJGvb5O+lLSZJWgbDDAG9HfgV4KtJDrbY+4DbgHuTXAd8A7iq\nbdsHXAGMA98DrgWoqqNJPgg80tp9oKqOLkgW0gDeS0ia2awFoKq+zODxe4B3DmhfwPXTvNZuYPdc\nDlDqEouWlpJXAktSR1kAJKmjLACS1FEWAEnqKP8gjJadFzBJy8MegCR1lAVAkjrKAiBJHWUBkKSO\nsgBIUkdZACSpoywAktRRFgBJ6igLgCR1lFcCS6vc1FtMe7W1jrMHIEkdZQGQpI6yAEhSR1kAJKmj\nZp0ETrIb+CXgpar6mRZ7P/BrwGRr9r6q2te23QRcB7wG/HZV3dfi24A/AdYAf15Vty1sKhol/u1b\nafkN0wP4GLBtQPz2qtraHsc//M8DrgbOb/v8aZI1SdYAHwEuB84D3tPaSpKWyaw9gKr6UpLNQ77e\nduCeqnoVeDbJOHBh2zZeVc8AJLmntX1izkcsSVoQpzIHcEOSQ0l2J1nbYhuA5/vaTLTYdHFJ0jKZ\nbwG4E3gzsBV4Afhwi2dA25ohfpIkO5McSHJgcnJyUBNJp2DzjZ//wUPdNq8rgavqxePLST4KfK6t\nTgCb+ppuBI605eniU197F7ALYGxsbGCR0GjyA0daWebVA0iyvm/13cDjbXkvcHWSM5KcC2wBHgYe\nAbYkOTfJ6fQmivfO/7AlSadqmNNAPwG8Azg7yQRwC/COJFvpDeM8B/w6QFUdTnIvvcndY8D1VfVa\ne50bgPvonQa6u6oOL3g2kqShDXMW0HsGhO+aof2twK0D4vuAfXM6OknSovFKYEnqKAuAJHWUBUCS\nOsoCIEkdZQGQpI7yT0JqRfFiMWnp2AOQpI6yAEhSR1kAJKmjnAPQonJMf2Xr//957rZ3LeORaDnY\nA5CkjrIASFJHOQQkrUIOvWkY9gAkqaMsAJLUURYASeooC4AkdZQFQJI6ygIgSR01awFIsjvJS0ke\n74udlWR/kqfb89oWT5I7kownOZTkgr59drT2TyfZsTjpSJqvzTd+/gcPdcMwPYCPAdumxG4E7q+q\nLcD9bR3gcmBLe+wE7oRewQBuAS4CLgRuOV40JEnLY9YCUFVfAo5OCW8H9rTlPcCVffG7q+dB4Mwk\n64HLgP1VdbSqXgb2c3JRkSQtofnOAbyxql4AaM/ntPgG4Pm+dhMtNl1ckrRMFnoSOANiNUP85BdI\ndiY5kOTA5OTkgh6cJOl18y0AL7ahHdrzSy0+AWzqa7cRODJD/CRVtauqxqpqbN26dfM8PEnSbOZb\nAPYCx8/k2QF8ti9+TTsb6GLglTZEdB9waZK1bfL30haTJC2TWe8GmuQTwDuAs5NM0Dub5zbg3iTX\nAd8ArmrN9wFXAOPA94BrAarqaJIPAo+0dh+oqqkTyxph/mERafTMWgCq6j3TbHrngLYFXD/N6+wG\nds/p6CRJi8a/ByBpRvbuVi9vBSFJHWUBkKSOsgBIUkc5B6B586Zh0mizByBJHWUBkKSOcghI0tA8\nJXR1sQcgSR1lAZCkjnIISAvOs4Ok0WAPQJI6yh6A5sRv99LqYQ9AkjrKHoCkefGU0NFnD0CSOsoe\ngKSTONfTDfYAJKmjLACS1FEOAWlWDgdIq9Mp9QCSPJfkq0kOJjnQYmcl2Z/k6fa8tsWT5I4k40kO\nJblgIRKQJM3PQvQAfr6qvtW3fiNwf1XdluTGtv4HwOXAlva4CLizPUsacZ4SOpoWYw5gO7CnLe8B\nruyL3109DwJnJlm/CO8vSRrCqRaAAr6Q5NEkO1vsjVX1AkB7PqfFNwDP9+070WInSLIzyYEkByYn\nJ0/x8CRJ0znVIaC3V9WRJOcA+5N8bYa2GRCrkwJVu4BdAGNjYydtlyQtjFPqAVTVkfb8EvAZ4ELg\nxeNDO+35pdZ8AtjUt/tG4MipvL8kaf7mXQCS/GiSHz++DFwKPA7sBXa0ZjuAz7blvcA17Wygi4FX\njg8VSZKW3qkMAb0R+EyS46/zl1X1P5M8Atyb5DrgG8BVrf0+4ApgHPgecO0pvLekEeDZQSvbvAtA\nVT0D/OyA+P8G3jkgXsD1830/SdLC8kpg/YDf1qRu8V5AktRR9gA0kPf/0UKzh7nyWAAkLSi/PIwO\nC0DH+csqdZdzAJLUURYASeooh4A6yGEfLTcnhFcGewCS1FEWAEnqKIeAJC0rh4OWjwWgIxz3lzSV\nQ0CS1FH2ACStSNP1Wh0mWjj2ACSpo+wBSFoxnKtaWhaAVcZfIK12njW0cCwAI84PfEnzZQEYEX7r\nkU7m78WpWfICkGQb8CfAGuDPq+q2pT6GUee3fulkFoO5W9ICkGQN8BHgF4EJ4JEke6vqiaU8jlHh\nB7106iwM01vqHsCFwHhVPQOQ5B5gO2ABaPzQl07ddL9HM/1+dbE4LHUB2AA837c+AVy0xMewYPyw\nllaP6XoKc/09H6VCstQFIANidUKDZCews61+N8lTi3g8ZwPfWsTXXy6rNS9YvbmZ1wqSD83aZNq8\nhth3KfzkMI2WugBMAJv61jcCR/obVNUuYNdSHEySA1U1thTvtZRWa16wenMzr9GyWvJa6ltBPAJs\nSXJuktOBq4G9S3wMkiSWuAdQVceS3ADcR+800N1VdXgpj0GS1LPk1wFU1T5g31K/7zSWZKhpGazW\nvGD15mZeo2VV5JWqmr2VJGnV8XbQktRRq64AJNmd5KUkj/fFrkpyOMn3k4xNaX9TkvEkTyW5rC++\nrcXGk9y4lDkMMk1e/zXJ15IcSvKZJGf2bRvlvD7YcjqY5AtJfqLFk+SOduyHklzQt8+OJE+3x47l\nyKXfoLz6tr03SSU5u62PdF5J3p/km+3/62CSK/q2jcTPIUz/f5bkt9qxHk7yX/riI5PbtKpqVT2A\nfwNcADzeF3sr8C+BB4Cxvvh5wGPAGcC5wNfpTU6vacs/BZze2py3AvO6FHhDW/4Q8KFVktc/7Vv+\nbeDP2vIVwF/Tu57kYuChFj8LeKY9r23La1daXi2+id5JEP8AnL0a8gLeD7x3QNuR+TmcIbefB/4G\nOKOtnzOKuU33WHU9gKr6EnB0SuzJqhp0Qdl24J6qerWqngXG6d2u4ge3rKiq/wscv2XFspkmry9U\n1bG2+iC96ypg9PP6Tt/qj/L6xYLbgbur50HgzCTrgcuA/VV1tKpeBvYD2xb/6Kc3KK/mduA/cuIF\nkKshr0FG5ucQps3tN4HbqurV1ualFh+p3Kaz6grAHA26NcWGGeIr2a/S+xYJqyCvJLcmeR74ZeA/\ntfBI55Xk3wLfrKrHpmwa6byaG9rw1e4ka1tsNeT1FuBfJ3koyf9K8nMtvhpy63wBmO7WFLPesmIl\nSXIzcAz4+PHQgGYjlVdV3VxVm+jldEMLj2xeSf4JcDOvF7MTNg+IjURezZ3Am4GtwAvAh1t81POC\n3qnya+kNzf0+cG+SsDpy63wBmO7WFLPesmKlaBODvwT8crXBSVZBXn3+Evh3bXmU83ozvbHix5I8\nR+8Yv5LkXzDaeVFVL1bVa1X1feCj9IZBYMTzaiaAT7fhuYeB79O7D9BqyG31TQK3z8DNTJl8a/EH\nOHES+HxOnMh5ht4kzhva8rm8PpFz/krLi9548BPAuintRj2vLX3LvwV8si2/ixMnSx9u8bOAZ+l9\nU1vbls9aaXlN2fYcr08Cj3RewPq+5f9Ab2x85H4Op8ntN4APtOW30BveySjmNjDf5T6ARfgP/AS9\nbuj/o1eNrwPe3ZZfBV4E7utrfzO9WfungMv74lcAf9+23bxC8xpvP5AH2+PPVklenwIeBw4B/wPY\n0NqG3h8U+jrwVU4s5r/a/j3GgWtXYl5Ttj/H6wVgpPMC/qId9yF69/bqLwgj8XM4Q26nA/+9/Tx+\nBbhkFHOb7uGVwJLUUV2fA5CkzrIASFJHWQAkqaMsAJLUURYASeooC4AkdZQFQJI6ygIgSR31/wEY\nRYBcuh76MQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fb77ff8b550>"
+       "<matplotlib.figure.Figure at 0x7fb774bfc240>"
       ]
      },
      "metadata": {},
@@ -246,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "812.26106 49.55790762\n"
+      "1363.8669 65.9307758516\n"
      ]
     }
    ],
@@ -286,6 +319,7 @@
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
